feat: Auth swagger
