# router/v1/user.go
@@ -40,7 +40,7 @@ func RegisterUserRoutes(rg *gin.RouterGroup) {
 		ctx.JSON(http.StatusOK, gin.H{"success": true, "data": data})
 	})
 
-	userRoute.GET("/:id", func(ctx *gin.Context) {
+	userRoute.GET("/:id", auth.User(), func(ctx *gin.Context) {
 		user, err := CollR("users", dto.ReadUser{}).FindById(ctx.Param("id"))
 		ErrorMessage(err, ctx)
 		ctx.JSON(http.StatusOK, gin.H{"success": true, "data": user})
